--- a/README
+++ b/README
@@ -5,4 +5,6 @@ Dependencies:
 Installation procedure:
 ~ To DO
 
+Helpful Links:
 
+http://www.sencha.com/forum/showthread.php?136362-Extjs-4-Dynamic-Model
