--- a/README
+++ b/README
@@ -3,7 +3,24 @@ Dependencies:
 - ExtJS 4 SDK
 
 Installation procedure:
-~ To DO
+1. Clone or download as zip
+   
+   git clone git@github.com:cjjavellana/cpis-reports-extjs4.git
+
+2. Download the ExtJS 4 SDK from http://www.sencha.com/products/extjs/
+	
+3. Extract ExtJS 4 SDK in the same level as the cpisapp directory and rename it 
+   to ext4 (if you don't, you have to change the references in the HTML files)
+
+4. Install the Apache Http Server 
+
+5. Copy your project folders and files into the htdocs directory of your Apache Http Server
+
+6. Start the Apache Http Server
+
+7. Open your favorite browser and navigate to http://localhost. You should be able to see the 
+   directory listing of the htdocs directory.
+   
 
 Helpful Links:
 
